--- a/src/main/resources/templates/sign.html
+++ b/src/main/resources/templates/sign.html
@@ -460,7 +460,7 @@
             <br>
             <a href="https://www.facebook.com" target="blank" class="fa fa-facebook"></a>
             <a href="https://www.twitter.com" target="blank" class="fa fa-twitter"></a>
-            <a href="https://www.gmail.com" target="blank" class="fa fa-google"></a>
+            <a href="/oauth2/authorization/google" target="blank" class="fa fa-google"></a>
             <a href="https://www.linkedin.com/login" target="blank" class="fa fa-linkedin"></a>
           </div>
         </div>
@@ -475,7 +475,7 @@
             <br>
             <a href="https://www.facebook.com" target="blank" class="fa fa-facebook"></a>
             <a href="https://www.twitter.com" target="blank" class="fa fa-twitter"></a>
-            <a href="https://www.gmail.com" target="blank" class="fa fa-google"></a>
+            <a href="/oauth2/authorization/google" target="blank" class="fa fa-google"></a>
             <a href="https://www.linkedin.com/login" target="blank" class="fa fa-linkedin"></a>
           </div>
         </div>
